Fix mobile menu alignment

--- a/src/assets/sass/layout/_responsive.scss
+++ b/src/assets/sass/layout/_responsive.scss
@@ -93,6 +93,10 @@
 
                     .layout-topbar-menu {
                         position: relative;
+                        
+                        a {
+                            padding-bottom: .6rem;
+                        }
 
                         > ul {
                             top: 2.75rem;
